--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           <h2>Dessert-Section</h2>
           <div class="menu-items dessert">
             <div class="item cake">
-                <h3>Chocolate Lava Cake</h3>
+                <h3>Chocolate  Cake</h3>
                 <p>Every bite is a warm, fudgy hug for your soul - ₹199 </p>
                 <button class="button" onclick="buyNow(this)">Buy Now</button>
             </div>
